--- a/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
+++ b/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,12pt,draft]{elsarticle}
+\documentclass[preprint,12pt]{elsarticle}
 \input{header} % All packages included
 
 
@@ -70,7 +70,7 @@ A series of numerical examples will be presented in order to demonstrate the rob
 
 \section{Conclusions}\label{sec:conclusions}
 \input{section/07_conclusion}
-
+\newpage
 \section{Neural Network postprocessing}\input{NeuralNetwork.tex}\label{sec:NN_cal}
 \section{Acknowledgements}\input{acknowledgement}
 
