--- a/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
+++ b/Flux_Calibration/PaperLatex_ML/NeuralNetwork.tex
@@ -311,24 +311,24 @@ Using this data, we can train a neural network that predicts the displacement fo
 \end{tikzpicture}
 \caption{Training process schematic. The number of variables modified during the parametric study can be seen in blue.}
 \end{figure}
-Alongside architecture-specific parameters, like the number of neurons, the number of layers and the number of epochs, we also studied the effect of the number of nodes and experiments. From the available 133 nodes, we took only a subset of them and used them to train the neural network, leaving the remaining nodes as test data to compare against. The same concept is used by selecting only a subset of experiments out of the ones available. The purpose of this subset selection is calibrating a neural network that is able to predict the complete response, reducing the computational expense without losing accuracy by reducing the number of nodes and experiments used. 
+Alongside architecture-specific parameters, like the number of neurons, the number of layers and the number of epochs, we also studied the effect of the number of nodes and experiments. From the available 266 nodes, we took only a subset of them and used them to train the neural network, leaving the remaining nodes as test data to compare against. The same concept is used by selecting only a subset of experiments out of the ones available. The purpose of this subset selection is calibrating a neural network that is able to predict the complete response, reducing the computational expense without losing accuracy by reducing the number of nodes and experiments used. 
 
 For each of the hyperparameters specified, the values studied were the following:
 
 \begin{table}[!hb]
   \centering
 \begin{tabular}{l|cccc}
-\textbf{Parameters} & \multicolumn{4}{c}{\textbf{Value}} \\ \hline
-Layers              & 2      & 3       & 4      & 6      \\
-Neurons             & 10     & 20      & 40     & -      \\
-Experiments         & 200    & 1000    & 2000   & 4000   \\
-Nodes               & 10     & 30      & 40     & -      \\
-Epochs              & 500    & 1000    & 5000   & -      
+\textbf{Parameters} & \multicolumn{3}{c}{\textbf{Value}} \\ \hline
+Layers              & 4      & 8       & 10            \\
+Neurons             & 10     & 20      & 40           \\
+Experiments         & 2077    & 7000    & 10000      \\
+Nodes               & 50     & 10      & 200           \\
+Epochs              &  \multicolumn{3}{c}{1e4}        
 \end{tabular}
   \caption{Values used in the parametric study during the training phase. Every combination of these parameters was analysed and parsed to obtain the best performing architecture.}
 \end{table}
 
-Every possible combination of these parameters was studied, totalling 200 different architectures that were run and analysed. To measure the performance of these architecture, the R2 measurement (\ref{eq:R2_measurement}), was used. This metric allows us to compare the displacements predicted by the neural network against the test data (the remaining data that was not taken into the training process). To provide a clearer outlook on the results of the parametric hyperparameter study, we compiled the output of R2 measurements on every combination of 10 and 30 nodes using 2000 and 4000 experiments with 5000 epochs. These results can be visualized in Table \ref{tab: R2_measurement}
+Every possible combination of these parameters was studied, totalling 80 different architectures that were run and analysed. To measure the performance of these architecture, the R2 measurement (\ref{eq:R2_measurement}), was used. This metric allows us to compare the displacements predicted by the neural network against the test data (the remaining data that was not taken into the training process). To provide a clearer outlook on the results of the parametric hyperparameter study, we compiled the output of R2 measurements on every combination of 50 and 200 nodes using 2077 and 10000 experiments. These results can be visualized in Table \ref{tab: R2_measurement}
 
 
 % I will take 4 combinations of n_nodes and n_experiments
@@ -361,76 +361,80 @@ Every possible combination of these parameters was studied, totalling 200 differ
 \begin{minipage}{.49\textwidth}
 
 \begin{tabular}{lllllllcc|ccc}
-\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=10$\\ $n_{experiments}=4000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
+\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=50$\\ $n_{experiments}=2077$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
 \multicolumn{9}{c|}{}                                                                                                 & 10        & 20        & 40        \\ \hline
-        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 2        &  0.964        &  0.951        &  0.966        \\
-        &         &         &         &         &         &         &                                      & 3        &  0.973        &  0.999       &  0.999        \\
-        &         &         &         &         &         &         &                                      & 4        &  0.998        &  0.996        &  0.998        \\
-        &         &         &         &         &         &         &                                      & 6        &  0.990       & 0.998       &  0.999      
+        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 4        &  0.9969        &  0.9971        &  0.9990        \\
+        &         &         &         &         &         &         &                                      & 8        &  0.9960        &  0.9985       &  0.9973        \\
+        &         &         &         &         &         &         &                                      & 10        &  0.9970        &  0.9985        &  0.9990        
 \end{tabular}
-
-
 
 \end{minipage}
 
 \begin{minipage}{.49\textwidth}
+
 \begin{tabular}{lllllllcc|ccc}
-\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=10$\\ $n_{experiments}=2000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
+\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=50$\\ $n_{experiments}=10000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
 \multicolumn{9}{c|}{}                                                                                                 & 10        & 20        & 40        \\ \hline
-        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 2        &  0.946        & 0.956         &  0.960        \\
-        &         &         &         &         &         &         &                                      & 3        &  0.996        &  0.999        &  0.997        \\
-        &         &         &         &         &         &         &                                      & 4        &  0.995        & 0.999         & 0.998         \\
-        &         &         &         &         &         &         &                                      & 6        & 0.994         & 0.998         &  0.998       
+        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 4        &  0.9953        &  0.9986        &  0.9989        \\
+        &         &         &         &         &         &         &                                      & 8        &  0.9968        &  0.9982       &  0.9987        \\
+        &         &         &         &         &         &         &                                      & 10        &  0.9965        &  0.9983        &  0.9990        
 \end{tabular}
+
 \end{minipage}
 
 \begin{minipage}{.49\textwidth}
+
 \begin{tabular}{lllllllcc|ccc}
-\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=30$\\ $n_{experiments}=4000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
+\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=200$\\ $n_{experiments}=2077$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
 \multicolumn{9}{c|}{}                                                                                                 & 10        & 20        & 40        \\ \hline
-        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 2        & 0.932         &   0.950       &  0.964        \\
-        &         &         &         &         &         &         &                                      & 3        &  0.990        & 0.994         &  0.997        \\
-        &         &         &         &         &         &         &                                      & 4        &  0.992        &  0.997        &  0.999        \\
-        &         &         &         &         &         &         &                                      & 6        &  0.991        &  0.996       &        0.998 
+        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 4        &  0.9966        &  0.9980        &  0.9988        \\
+        &         &         &         &         &         &         &                                      & 8        &  0.9962        &  0.9982       &  0.9984        \\
+        &         &         &         &         &         &         &                                      & 10        &  0.9891        &  0.9978        &  0.9977        
 \end{tabular}
+
 \end{minipage}
 
 \begin{minipage}{.49\textwidth}
+
 \begin{tabular}{lllllllcc|ccc}
-\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=30$\\ $n_{experiments}=2000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
+\multicolumn{9}{c|}{\multirow{2}{*}{\begin{tabular}[c]{@{}c@{}}$n_{nodes}=200$\\ $n_{experiments}=10000$\end{tabular}}} & \multicolumn{3}{c}{$n_{neurons}$} \\
 \multicolumn{9}{c|}{}                                                                                                 & 10        & 20        & 40        \\ \hline
-        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 2        & 0.953         &  0.944        &  0.979        \\
-        &         &         &         &         &         &         &                                      & 3        &  0.987        &  0.994        &  0.996        \\
-        &         &         &         &         &         &         &                                      & 4        &  0.993        &  0.997        & 0.997         \\
-        &         &         &         &         &         &         &                                      & 6        & 0.989         &  0.995        &  0.998       
+        &         &         &         &         &         &         & \multirow{4}{*}{\rotatebox{90}{$n_{layers}$}}        & 4        &  0.9944        &  0.9981        &  0.9991        \\
+        &         &         &         &         &         &         &                                      & 8        &  0.9958        &  0.9976       &  0.9995        \\
+        &         &         &         &         &         &         &                                      & 10        &  0.9971        &  0.9977        &  0.9969        
 \end{tabular}
+
 \end{minipage}
 
-  \caption{R2 measurement for every combination of neurons and layers for 10 and 20 nodes and 2000 and 4000 experiments. These results were obtained using 5000 epochs.}
+
+
+
+
+  \caption{R2 measurement for every combination of neurons and layers for 50 and 200 nodes and 2077 and 10000 experiments.}
   \label{tab: R2_values}
 \end{table}
 
 
-Out of the analysed architectures in Table \ref{tab: R2_values}, the best configuration is a combination of 4 layers, 20 neurons, 2000 experiments, 10 nodes and 5000 iterations with an R2 on the test cases of 0.9994. To further visualize this result, we plotted the output displacement from the FE analysis against the displacement predicted by the best performing architecture. Since the displacement data is given per axis in the global coordinate system, we compared the displacement per axis; namely the first and third axis. The output of this analysis is displayed in Figure \ref{fig: R2_plot}
+Out of the analysed architectures in Table \ref{tab: R2_values}, the best configuration is a combination of 8 layers, 40 neurons, 10000 experiments, 200 nodes  with an R2 on the test cases of 0.9995. To further visualize this result, we plotted the output displacement from the FE analysis against the displacement predicted by the best performing architecture. Since the displacement data is given per axis in the global coordinate system, we compared the displacement per axis; namely the first and third axis. The output of this analysis is displayed in Figure \ref{fig: R2_plot}
 
 \begin{figure}
   \centering
-  \subfloat[Displacement in the first axis of the coordenate system]{\includegraphics[width=0.45\linewidth]{Figures/NeuralNetworkStudy/R2_Coord1.pdf}}
-  \subfloat[Displacement in the third axis of the coordenate system]{\includegraphics[width=0.45\linewidth]{Figures/NeuralNetworkStudy/R2_Coord3.pdf}}
-  \caption{R2 evaluation of the displacements. FE data vs ML predicted output for the better performing neural network architecture at sampling point 18673. A clear linear distribution can be seen between the predicted and FE displacements, indicating a high R2 and correlation between the data}
+  \subfloat[Displacement in the first axis of the coordenate system]{\includegraphics[width=0.45\linewidth]{Figures/NeuralNetworkStudy/R2_Coord1_corrected_V3.pdf}}
+  \subfloat[Displacement in the third axis of the coordenate system]{\includegraphics[width=0.45\linewidth]{Figures/NeuralNetworkStudy/R2_Coord3_corrected_V3.pdf}}
+  \caption{R2 evaluation of the displacements. FE data vs ML predicted output for the better performing neural network architecture. Sampling of 200 nodes at 2000 experiments, randomly chosen. A clear linear distribution can be seen between the predicted and FE displacements, indicating a high R2 and correlation between the data. However, there is a dispersion in the data which can be expected due to the small amount of data taken as a training dataset.}
   \label{fig: R2_plot}
 \end{figure}
 
 As can be seen from Figure \ref{fig: R2_plot}, there is a high correlation between the predicted data from the neural network and the data coming from the FE analysis, which was also indicated by a high R2 value.
 
-To further analyse the performance of the machine learning architecture, we can plot the loss function during the training process, which exhibits a downward tendency as the training progresses. This result can be seen in Figure \ref{fig: losses}. Furthermore, we can see that the training is fully converged, as there is no significant variation in the lost function after 2000 epochs.
+To further analyse the performance of the machine learning architecture, we can plot the loss function during the training process, which exhibits a downward tendency as the training progresses. This result can be seen in Figure \ref{fig: losses}. 
 
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.6\textwidth]{Figures/NeuralNetworkStudy/Loss_1.pdf}
+    \includegraphics[width=0.6\textwidth]{Figures/NeuralNetworkStudy/Loss_corrected_V3.pdf}
   \end{center}
-  \caption{Loss function during the training for the best performant neural network configuration. Convergence is achieved after aproximately 2000 training epochs.}
+  \caption{Loss function during the training for the best performant neural network configuration. Convergence is not fully achieved, however a high enough R2 is reached. This effectively means that further trainig the model would cause overfitting. Spikes can be seen in in the loss function during the training process, which are caused by a high value of the $\eta$ parameter in the Adam optimizer. This means that the loss is minimized quicker, at the expense of bigger fluctuating values. This strikes a good balance between effectiveness and precision.}
   \label{fig: losses}
 \end{figure}
 
