--- a/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
+++ b/Flux_Calibration/PaperLatex_ML/ThermoMechanicsPaper.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,12pt]{elsarticle}
+\documentclass[draft,preprint,12pt]{elsarticle}
 \input{header} % All packages included
 
 
